--- a/locale_en_US.properties
+++ b/locale_en_US.properties
@@ -35,6 +35,7 @@ transformer.flow.splitter.message = Split {} blocks.
 transformer.flow.systemExitReplacer.name = System.exit Replacer
 transformer.flow.systemExitReplacer.message = Replaced {} System.exit calls.
 
+transformer.flow.variable.name = Variable Replacer
 transformer.flow.variable.message = Replaced {} variables.
 
 transformer.misc.access.name = Access Transformer
