--- a/locale_en_US.properties
+++ b/locale_en_US.properties
@@ -1,5 +1,7 @@
 language.name = English (US)
 
+constant.finished = Finished
+
 logger.debug = DEBUG
 logger.warn = WARN
 logger.info = INFO
@@ -9,7 +11,7 @@ message.buildingHierarchy = Building hierarchy...
 message.duplicateFile = Duplicate file found:
 message.noInputOutput = Failed to find input and output files
 message.64bitOnly = qProtect only supports a 64-bit installation of Java.
-message.finishedObf = Finished obfuscating {} in {} ms ({}kb -> {}kb).
+message.finished = Finished obfuscating {} in {} ms ({}kb -> {}kb).
 message.failedToTransform = Failed to transform class: {} with {}
 message.failedToRead = Failed to read JAR/APK file
 message.failedToLoadClass = Failed to load .class file: {}
@@ -21,7 +23,6 @@ message.libraryNotFound = Library {} could not be found and will be ignored.
 message.libraryCantOpen = Library {} could not be opened as a zip file.
 message.libraryLoaded = Loaded library {} in {} ms.
 message.cantLoadClass = IOException happened while trying to load classes from {}.
-message.finished = Finished
 
 transformer.arithmetic.name = Arithmetic Transformer
 transformer.arithmetic.message = Obfuscated %count% arithmetic instructions
