--- a/locale_en_US.properties
+++ b/locale_en_US.properties
@@ -7,7 +7,7 @@ logger.error = ERROR
 
 message.buildingHierarchy = Building hierarchy...
 message.duplicateFile = Duplicate file found:
-message.noInputOutput = Failed to find input and output files
+message.noInputOutput = Failed to find input and output files!
 message.64bitOnly = qProtect only supports a 64-bit installation of Java.
 message.finishedObf = Finished obfuscating {} in {} ms ({}kb -> {}kb).
 message.failedToTransform = Failed to transform class: {} with {}
@@ -24,7 +24,7 @@ message.cantLoadClass = IOException happened while trying to load classes from {
 message.finished = Finished
 
 transformer.arithmetic.name = Arithmetic Transformer
-transformer.arithmetic.message = Obfuscated %count% arithmetic instructions
+transformer.arithmetic.message = Obfuscated %count% arithmetic instructions.
 
 transformer.flow.name = Flow Transformer
 
@@ -56,7 +56,7 @@ transformer.renamer.name = Renamer Transformer
 transformer.renamer.message = Renamed %classes% classes, %methods% methods and %fields% fields.
 
 transformer.number.pooler.name = Number Pooler
-transformer.number.pooler.message = Pooled %count% numbers
+transformer.number.pooler.message = Pooled %count% numbers.
 
 transformer.string.aes.name = AES String Encryption
 transformer.string.enhanced.name = Enhanced String Encryption
@@ -71,4 +71,4 @@ transformer.string.message = Encrypted %count% strings
 transformer.string.message.skipping = Skipping string obfuscation in method {} because there is no remaining space.
 
 transformer.unfinalizer.name = Constant Unfinalizer
-transformer.unfinalizer.message = Un-finalized %count% constants
+transformer.unfinalizer.message = Un-finalized %count% constants.
