--- a/locale_en_US.properties
+++ b/locale_en_US.properties
@@ -58,6 +58,12 @@ transformer.renamer.message = Renamed %classes% classes, %methods% methods and %
 transformer.number.pooler.name = Number Pooler
 transformer.number.pooler.message = Pooled %count% numbers.
 
+transformer.number.doubleConverter.name = Double To Long Transformer
+transformer.number.doubleConverter.message = Converted %count% double constants.
+
+transformer.number.polymorphic.name = Polymorphic Number Encryption
+transformer.number.polymorphic.message = Encrypted %count% numbers.
+
 transformer.string.aes.name = AES String Encryption
 transformer.string.enhanced.name = Enhanced String Encryption
 
@@ -67,8 +73,8 @@ transformer.string.pooler.message = Pooled %count% strings.
 transformer.string.splitter.name = String Splitter
 transformer.string.splitter.message = Split %count% strings.
 
-transformer.string.message = Encrypted %count% strings
+transformer.string.message = Encrypted %count% strings.
 transformer.string.message.skipping = Skipping string obfuscation in method {} because there is no remaining space.
 
-transformer.unfinalizer.name = Constant Unfinalizer
+transformer.unfinalizer.name = Constant Unfinalizer.
 transformer.unfinalizer.message = Un-finalized %count% constants.
