--- a/locale_en_US.properties
+++ b/locale_en_US.properties
@@ -5,6 +5,9 @@ logger.warn = WARN
 logger.info = INFO
 logger.error = ERROR
 
+constants.username = Username
+constants.version = Version
+
 message.buildingHierarchy = Building hierarchy...
 message.duplicateFile = Duplicate file found:
 message.noInputOutput = Failed to find input and output files!
