--- a/locale_de_DE.properties
+++ b/locale_de_DE.properties
@@ -5,7 +5,7 @@ logger.warn = WARNUNG
 logger.info = INFO
 logger.error = FEHLER
 
-constants.username = Username
+constants.username = Benutzername
 constants.version = Version
 
 message.buildingHierarchy = Erzeuge Hierarchie...
