fix grammar of finish being wrong in some languages

--- a/locale_af_ZA.properties
+++ b/locale_af_ZA.properties
@@ -24,7 +24,7 @@ message.libraryNotFound = Library {} could not be found and will be ignored.
 message.libraryCantOpen = Library {} could not be opened as a zip file.
 message.libraryLoaded = Loaded library {} in {} ms.
 message.cantLoadClass = IOException happened while trying to load classes from {}.
-message.finished = Finished
+message.transformer.finished = Finished {}
 
 transformer.arithmetic.name = Arithmetic Transformer
 transformer.arithmetic.message = Obfuscated %count% arithmetic instructions
