--- a/locale_de_DE.properties
+++ b/locale_de_DE.properties
@@ -24,7 +24,7 @@ message.libraryNotFound = Bibliothek {} konnte nicht gefunden werden und wird ig
 message.libraryCantOpen = Bibliothek {} konnte nicht als Zip-Datei geöffnet werden.
 message.libraryLoaded = Bibliothek {} geladen in {} ms.
 message.cantLoadClass = IOException ist beim Versuch, Klassen von {} zu laden, aufgetreten.
-message.finished = Fertiggestellt
+message.transformer.finished = {} Fertiggestellt
 
 transformer.arithmetic.name = Arithmetischer Transformer
 transformer.arithmetic.message = Obfuscated %count% arithmetic instructions
