--- a/locale_it_IT.properties
+++ b/locale_it_IT.properties
@@ -24,7 +24,7 @@ message.libraryNotFound = Impossibile trovare la libreria {} e verrà ignorata.
 message.libraryCantOpen = Impossibile aprire la libreria {} come file zip.
 message.libraryLoaded = Libreria {} caricata in {} ms.
 message.cantLoadClass = IOException happened while trying to load classes from {}.
-message.finished = Finished
+message.transformer.finished = Finished {}
 
 transformer.arithmetic.name = Trasformazione Aritmetica
 transformer.arithmetic.message = Offuscate %count% operazioni aritmetiche
