--- a/locale_es_ES.properties
+++ b/locale_es_ES.properties
@@ -24,7 +24,7 @@ message.libraryNotFound = No se encontró la biblioteca {} y fue ignorada.
 message.libraryCantOpen = Library {} could not be opened as a zip file.
 message.libraryLoaded = Loaded library {} in {} ms.
 message.cantLoadClass = IOException happened while trying to load classes from {}.
-message.finished = Finished
+message.transformer.finished = Finished {}
 
 transformer.arithmetic.name = Arithmetic Transformer
 transformer.arithmetic.message = Obfuscated %count% arithmetic instructions
