--- a/locale_pl_PL.properties
+++ b/locale_pl_PL.properties
@@ -24,7 +24,7 @@ message.libraryNotFound = Biblioteka {} nie została odnaleziona i będzie pomin
 message.libraryCantOpen = Biblioteka {} nie może być otwarta jako plik zip (zły format).
 message.libraryLoaded = Załadowano bibliotekę {} w {} ms.
 message.cantLoadClass = Wystąpił błąd IOException podczas ładowania klas z {}.
-message.finished = Zakończono
+message.transformer.finished = Zakończono {}
 
 transformer.arithmetic.name = Transformator Arytmetyczny
 transformer.arithmetic.message = Zaobfuskowano %count% instrukcji arytmetycznych
